components/webui/src/components/app.scss
.whitelink {
    color: white;
}

.body {
    background: #eee;
    height: 100%;
}

.app-layout {
    height: 100vh;
    display: flex;
    flex-direction: column;
    

    .app-header {
        flex: 0 0 auto;
    }

    .app-main {
        display: flex;
        flex-direction: row;
        background: #eee;
        flex: 0 0 fill;
        height: 100%;
        
        .item-selector {
            min-width: 200px;
            background: #fff;
            box-shadow: 0px 0px 8px #aaa;
            z-index: 1;
            padding: 10px;
    
            .hidden {
                width: 0px;
            }
        }

        .app-content {
            display: flex;
        }

            
        .app-sidebar {
            display: flex;
            flex-direction: column;
            background-color: #eee;
            flex: 0 0 auto;
            box-shadow: 0px 0px 8px #aaa;
            border-right: #ccc 1px solid;
            transition: width 100ms;
            align-content: flex-start;
            width: 125px;
        
            .divider {
                height: 1px;
                width: 90%;
                border-bottom: #ccc 1px solid;
                margin-top: 5px;
                margin-bottom: 5px;
                align-self: center;
            }
        
            .spacer {
                height: 50px;
            }
        
            &.small {
                width: 65px;
            }
        }
    
    }

    
}

